--- a/Gomel_T_a_N/html/frame.html
+++ b/Gomel_T_a_N/html/frame.html
@@ -347,17 +347,20 @@
             </p>
             <!-- https://gomel.gov.by/ru/content/gomel/otkroy-gomel/pamyatnik-v-i-leninu/ -->
         </div>
-        <div class="text_content" id="БюстГромыко">
+        <div class="text_content" id="ПамятникДзержинскому">
             <p>
-                Бюст состоит из цилиндрического постамента (высотой 3 м), на котором возвышается бронзовый бюст (1,1 м). Площадка у основания памятника выложена гранитными плитами.
-                <br>
-                <br>
-                Бюст установлен известному советскому государственному деятелю, министру иностранных дел СССР А. А. Громыко, уроженцу деревни Старые Громыки (ныне Гомельская область). В Гомеле Громыко закончил профтехшколу и техникум. Бюст установлен как дважды Герою Социалистического Труда (1969, 1979 гг.).
-                <br>
-                <br>
-                Установлен в 1983 году в центральной части Пионерского сквера (ныне — сквер имени Громыко) рядом с улицей Советской, лицом к ней. Скульптор И. Рукавишников, архитекторы А. Климочкин и М. Посохин. Внесён в Государственный список историко-культурных ценностей РБ.
+                Каждый гомельчанин знает тихий и уютный скверик возле фабрики «Полеспечать». Возле входа в его вас встречает «железный Феликс» — так называли нашего Феликса Эдмундовича Дзержинского за его не сгибаемую волю и твёрдый характер. Памятник этому выдающемуся деятелю большевистской партии и Советского правительства, ближайшему соратнику Владимира Ильича Ленина, пламенному борцу за коммунизм установлен здесь в 1948 году. Автор проекта Иван Фёдорович Бурлака. Скульптура выполнена из бетона. На постаменте в 3.5 метра стоит величественная фигура Ф.Э. Дзержинского высотой в два с половиной метра. Феликс Эдмундович показан таким, каким его знают миллионы советских людей, в простой солдатской шинели. Он стоит здесь, не сгибаемый рыцарь революции, будто бережёт наш покой, наше счастье.
             </p>
-            <!-- https://monument.goub.by/?p=211 -->
+            <!-- https://gomelstreet.by/kraevedcheskie-zapiski-o-gomele/pamyatniki-nashego-goroda-f-e-dzerzhinskij -->
+        </div>
+        <div class="text_content" id="ПамятникХмельницкому">
+            <p>
+                Каждый, кто побывал в Киеве, на всю жизнь напомнил памятник Богдану Хмельницкому, выдающемуся государственному деятелю украинского народа, руководителю движения за освобождение Украины от иностранного гнёта. Благодаря его усилиям 8 января 1654 года был объявлен исторический акт объединения Украины с братской Россией.
+                <br>
+                <br>
+                Гомельчане, соседи братского украинского народа, чествуют память Богдана Хмельницкого. Одним из проявлений этой любви, уважения является памятник национальному герою Украины, установленный на улице, которая носит его имя, напротив стадиона «Локомотив». Он выполнен из бетона, высота постамента 5 метров, скульптуры — 3 метра. Автор проекта И.Д. Спирин.
+            </p>
+            <!-- https://gomelstreet.by/kraevedcheskie-zapiski-o-gomele/pamyatniki-nashego-goroda-bogdan-xmelnickij -->
         </div>
         <div class="text_content" id="УлицаСоветская">
             <p>
@@ -683,12 +686,12 @@
                 </section>
                 <section>
                     <div class="place">
-                        <div class="clickable" data-place="Бюст Громыко">
+                        <div class="clickable" data-place="Памятник Дзержинскому">
 
                         </div>
-                        <div class="clickable" data-place="Бюст Громыко">
+                        <div class="clickable" data-place="Памятник Дзержинскому">
                             <h4>
-                                Бюст Громыко
+                                Памятник Дзержинскому Ф. Э.
                             </h4>
                         </div>
                     </div>
@@ -703,12 +706,12 @@
                         </div>
                     </div>
                     <div class="place">
-                        <div class="clickable" data-place="Улица Интернациональная">
+                        <div class="clickable" data-place="Памятник Хмельницкому">
 
                         </div>
-                        <div class="clickable" data-place="Улица Интернациональная">
+                        <div class="clickable" data-place="Памятник Хмельницкому">
                             <h4>
-                                Улица Интернациональная
+                                Памятник Хмельницкому
                             </h4>
                         </div>
                     </div>
@@ -982,7 +985,7 @@
                                     </div>
                                     <div class="clickable" data-place="Бюст Громыко">
                                         <h4>
-                                            Бюст Громыко
+                                            Памятник Дзержинскому Ф. Э.
                                         </h4>
                                     </div>
                                 </div>
@@ -1001,12 +1004,12 @@
                                     </div>
                                 </div>
                                 <div class="place">
-                                    <div class="clickable" data-place="Улица Интернациональная">
+                                    <div class="clickable" data-place="Памятник Богдану Хмельницкому">
             
                                     </div>
-                                    <div class="clickable" data-place="Улица Интернациональная">
+                                    <div class="clickable" data-place="Памятник Богдану Хмельницкому">
                                         <h4>
-                                            Улица Интернациональная
+                                            Памятник Богдану Хмельницкому
                                         </h4>
                                     </div>
                                 </div>
