--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+https://github.com/YaroslavVFKFIRJ/Gomel_Then_and_Now/blob/main/index.html<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
     <!-- //Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- //css -->
-    <link rel="stylesheet" type="text/css" href="../css/frame.css">
+    <link rel="stylesheet" type="text/css" href="Gomel_T_a_N/css/frame.css">
 </head>
 <body id="body">
     <div id="blackout">
@@ -1149,12 +1149,12 @@
     </aside>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <script src="../js/frame_active.js"></script>
+    <script src="Gomel_T_a_N/js/frame_active.js"></script>
 
-    <script src="../js/frame_carousel.js"></script>
+    <script src="Gomel_T_a_N/js/frame_carousel.js"></script>
 
-    <script src="../js/modal_windows_und_blackout.js"></script>
+    <script src="Gomel_T_a_N/js/modal_windows_und_blackout.js"></script>
 
-    <script src="../js/scroll_with_acnchors.js"></script>
+    <script src="Gomel_T_a_N/js/scroll_with_acnchors.js"></script>
 </body>
 </html>
